Funcionalidad y vistas Proyecto
1. Se añade botones en el widget relacionados al proyecto

2. Se declara en el androidmanifest.xml

3. Creamos las nuevas actividades

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,16 @@
             </intent-filter>
         </activity>
 
+        <!-- CompraRapidaActivity -->
         <activity
-            android:name=".SecondActivity"
-            android:label="Vista Secundaria"
+            android:name=".CompraRapidaActivity"
+            android:label="Compra Rápida"
+            android:exported="true" />
+
+        <!-- ListaComprasActivity -->
+        <activity
+            android:name=".ListaComprasActivity"
+            android:label="Mi Lista de Compras"
             android:exported="true" />
 
         <receiver android:name=".SimpleWidget"
